<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColorSecondary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/content_description_act_login_logo"
            android:layout_margin="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_login_title"
            android:textSize="24sp"
            android:textColor="@color/textColorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_login_header"
            android:textSize="16sp"
            android:textColor="@color/textColorPrimaryLight"/>

        <Button
            android:id="@+id/act_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_login_btn_login"
            android:textColor="@color/textColorButtonRaised"
            android:layout_margin="16dp"/>

    </LinearLayout>

</FrameLayout>