<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:background="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/viewholder_friends_list_profile_iv"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/content_description_viewholder_friends_list_iv"/>

    <TextView
        android:id="@+id/viewholder_friends_list_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="14sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/viewholder_friends_list_profile_iv"
        android:layout_toEndOf="@id/viewholder_friends_list_profile_iv"
        android:layout_toLeftOf="@+id/viewholder_friends_list_pending_reject_iv"
        android:layout_toStartOf="@+id/viewholder_friends_list_pending_reject_iv"
        tools:text="Pending Friend"/>

    <ImageView
        android:id="@+id/viewholder_friends_list_pending_accept_iv"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_check_black_24dp"
        android:contentDescription="@string/content_description_viewholder_friends_list_pending_accept_iv"/>

    <ImageView
        android:id="@+id/viewholder_friends_list_pending_reject_iv"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/viewholder_friends_list_pending_accept_iv"
        android:layout_toStartOf="@id/viewholder_friends_list_pending_accept_iv"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:src="@drawable/ic_clear_black_24dp"
        android:contentDescription="@string/content_description_viewholder_friends_list_pending_reject_iv"/>

</RelativeLayout>